<resources>
    <string name="app_name">Find Stack Users</string>
    <string name="search">Search</string>
    <string name="insert_name">Please insert a name</string>
    <string name="user_name">User Name: </string>
    <string name="user_reputation">Reputation: </string>
    <string name="user_badges">Badges: </string>
    <string name="user_location">Location: </string>
    <string name="user_age">Age: </string>
    <string name="user_creation_date">Creation Date: </string>
    <string name="button_search_not_clickable">Wait for result</string>
    <string name="button_search_clickable">Search</string>
    <string name="age_no_available">Age not available</string>
    <string name="user_image">User Image</string>
</resources>
