<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.danielbastidas.findstackusers.activities.userdetail.UserDetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <!--IMAGE-->

            <ImageView
                android:layout_width="@dimen/image_dim"
                android:layout_height="@dimen/image_dim"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin"
                android:id="@+id/ivUserImage"
                />

            <!--USERNAME-->
            <LinearLayout
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textStyle="bold"
                    android:textAlignment="center"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:text="Daniel Bastidas"
                    android:id="@+id/tvUserName"
                    />
            </LinearLayout>

            <!--REPUTATION-->

            <LinearLayout
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_reputation"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daniel Bastidas"
                    android:layout_marginLeft="@dimen/margin"
                    android:id="@+id/tvUserReputation"
                    />
            </LinearLayout>


            <!--BADGES-->
            <LinearLayout
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_badges"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daniel Bastidas\nBastidas\nTambien cositas"
                    android:layout_marginLeft="@dimen/margin"
                    android:id="@+id/tvUserBadges"
                    />
            </LinearLayout>

            <!--LOCATION-->
            <LinearLayout
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_location"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daniel Bastidas"
                    android:id="@+id/tvUserLocation"
                    android:layout_marginLeft="@dimen/margin"
                    />
            </LinearLayout>


            <!--AGE-->
            <LinearLayout
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_age"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daniel Bastidas"
                    android:layout_marginLeft="@dimen/margin"
                    android:id="@+id/tvUserAge"
                    />
            </LinearLayout>


            <!--CREATION DATE-->
            <LinearLayout
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_creation_date"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daniel Bastidas"
                    android:id="@+id/tvUserCreation"
                    android:layout_marginLeft="@dimen/margin"
                    />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
